Make sure PanelsContent doesn't render behind NavBar

--- a/components/PanelsLayout/PanelsContent.sass
+++ b/components/PanelsLayout/PanelsContent.sass
@@ -16,19 +16,19 @@
     flex: 1 0 0
 
     .content
+      padding-top: 80px
       color: $white
 
   .container.light
     flex: 0 0 auto
     position: relative
     width: 40vw
-    height: 100vh
 
     .content
       position: fixed
-      top: 0
+      top: 80px
       width: inherit
-      height: 100vh
+      height: calc(100vh - 80px)
 
       color: black
 
